@@ -411,6 +411,12 @@ typedef enum eVdata_Format Vdata_Format;
  */
 #define VAPBS_RIGHT 0
 
+/** @brief	Maximum number of points on a sphere
+	@note	Used by VaccSurf
+	@ingroup	Vhal
+	*/
+#define MAX_SPHERE_PTS 50000
+
 /** @brief   Face definition for a volume
  *  @note    Consistent with PMG if RIGHT = EAST, BACK = SOUTH 
  *  @ingroup Vhal
